--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -5,4 +5,16 @@ add_executable(${EXECUTABLE_NAME}
     ${EXECUTABLE_FILES})
 target_link_libraries(${EXECUTABLE_NAME} PUBLIC
     ${LIBRARY_NAME}
-    nlohmann_json)
+    nlohmann_json::nlohmann_json)
+
+if(${ENABLE_WARNINGS})
+    target_set_warnings(
+        ${EXECUTABLE_NAME}
+        ${ENABLE_WARNINGS}
+        ${ENABLE_WARNINGS_AS_ERRORS}
+    )
+endif()
+
+if(${ENABLE_LTO})
+    target_enable_lto(${EXECUTABLE_NAME} ${ENABLE_LTO})
+endif()
