--- a/src/my_lib/CMakeLists.txt
+++ b/src/my_lib/CMakeLists.txt
@@ -16,3 +16,15 @@ target_link_libraries(${LIBRARY_NAME} PUBLIC
     nlohmann_json::nlohmann_json
     fmt::fmt
     spdlog::spdlog)
+
+if(${ENABLE_WARNINGS})
+    target_set_warnings(
+        ${LIBRARY_NAME}
+        ${ENABLE_WARNINGS}
+        ${ENABLE_WARNINGS_AS_ERRORS}
+    )
+endif()
+
+if(${ENABLE_LTO})
+    target_enable_lto(${LIBRARY_NAME} ${ENABLE_LTO})
+endif()
