--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,8 @@ option(ENABLE_SANITIZER_UNDEF "Enable ..." ON)
 option(ENABLE_LTO "Enable ..." ON)
 
 option(USE_CPM "Whether to use CPM" OFF)
-option(USE_CONAN "Whether to use Conan" ON)
+option(USE_CONAN "Whether to use Conan" OFF)
+option(USE_VCPKG "Whether to use VCPKG" ON)
 
 set(LIBRARY_NAME Library)
 set(EXECUTABLE_NAME Executable)
@@ -62,6 +63,14 @@ if(USE_CPM)
 elseif(USE_CONAN)
     message(STATUS "Using Conan")
     include(${CMAKE_BINARY_DIR}/conan_toolchain.cmake)
+    find_package(nlohmann_json REQUIRED)
+    find_package(fmt REQUIRED)
+    find_package(spdlog REQUIRED)
+    find_package(cxxopts REQUIRED)
+    find_package(Catch2 REQUIRED)
+elseif(USE_VCPKG)
+    message(STATUS "Using VCPKG")
+    include(${PROJECT_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake)
     find_package(nlohmann_json REQUIRED)
     find_package(fmt REQUIRED)
     find_package(spdlog REQUIRED)
